--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,6 @@
 anyio==3.6.2
+aws-lambda-powertools==2.4.0
+aws-xray-sdk==2.11.0
 boto3==1.26.16
 botocore==1.29.16
 fastapi==0.87.0
@@ -13,3 +15,4 @@ sniffio==1.3.0
 starlette==0.21.0
 typing_extensions==4.4.0
 urllib3==1.26.13
+wrapt==1.14.1
